test/files/parser/errors/eof-function-comma.otest
name = "End of file after function argument comma"
line = 3
character = 1
error = 'Expected input name after ",".'

---

sine(volume: 1,
